--- a/src/index.css
+++ b/src/index.css
@@ -326,9 +326,11 @@ button {
 }
 
 .swiperSlideDiv {
-  position: relative;
-  width: 100%;
-  height: 100%;
+  background-size: cover;
+  background: center no-repeat;
+  position: -webkit-sticky;
+  max-width: 50%;
+  max-height: 50%;
 }
 
 .swiperSlideImg {
