--- a/src/index.css
+++ b/src/index.css
@@ -327,8 +327,9 @@ button {
 
 .swiperSlideDiv {
   background-size: cover;
+  background-color:aqua;
   background: center no-repeat;
-  position: -webkit-sticky;
+  position:relative;
   max-width: 50%;
   max-height: 50%;
 }
