--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ html::-webkit-scrollbar {
 
 body {
   font-family: 'Montserrat', sans-serif;
-  background-color: #f2f4f8;
+  background-color:rgb(11, 233, 233);
   margin: 0;
   box-sizing: border-box;
 }
@@ -145,7 +145,7 @@ button {
   bottom: 0;
   right: 0;
   height: 85px;
-  background-color: #ffffff;
+  background-color: #c5c0c0;
   z-index: 1000;
   display: flex;
   justify-content: center;
@@ -213,7 +213,7 @@ button {
 
 .forgotPasswordLink {
   cursor: pointer;
-  color: #00cc66;
+  color: #02a051;
   font-weight: 600;
   text-align: right;
 }
@@ -290,10 +290,11 @@ button {
 
 .registerLink {
   margin-top: 4rem;
-  color: #00cc66;
-  font-weight: 600;
+  color: #010202;
+  font-weight: 900;
   text-align: center;
-  margin-bottom: 3rem;
+  margin-bottom: 10rem;
+  border-color: #000000;
 }
 
 @media (min-width: 1217px) {
@@ -314,6 +315,7 @@ button {
 
 .exploreCategoryHeading {
   margin-top: 3rem;
+  font-weight: 400;
 }
 
 .swiper-container {
@@ -322,12 +324,12 @@ button {
 }
 
 .swiper-pagination-bullet-active {
-  background-color: #ffffff !important;
+  background-color: #080808 !important;
 }
 
 .swiperSlideDiv {
   background-size: cover;
-  background-color:aqua;
+  background-color:rgb(226, 238, 238);
   background: center no-repeat;
   position:relative;
   max-width: 50%;
@@ -335,7 +337,7 @@ button {
 }
 
 .swiperSlideImg {
-  width: 100%;
+  width: 50%;
   object-fit: cover;
 }
 
